--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/index.js",
+    "start-production": "node server/index.js",
+    "build": "webpack -d --watch",
+    "build-production": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,33 @@
   "bugs": {
     "url": "https://github.com/Madror7/Blogo/issues"
   },
-  "homepage": "https://github.com/Madror7/Blogo#readme"
+  "homepage": "https://github.com/Madror7/Blogo#readme",
+  "dependencies": {
+    "nodemon": "^1.19.1",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "body-parser": "^1.19.0",
+    "brotli-gzip-webpack-plugin": "^0.5.0",
+    "compression": "^1.7.3",
+    "css-loader": "^2.1.0",
+    "csv-write-stream": "^2.0.0",
+    "dotenv": "^7.0.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "faker": "^4.1.0",
+    "morgan": "^1.9.1",
+    "newrelic": "^5.7.0",
+    "pg": "^7.10.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "static-site-generator-webpack-plugin": "^3.4.2",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
+  }
 }
